--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "@cometchat-pro/chat": "^1.8.5",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
