--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@cometchat-pro/chat": "^1.8.5",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.2"
   },
