--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@cometchat-pro/chat": "^1.8.5",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "event-source-polyfill": "^1.0.11",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.0.3",
