--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.8.5",
+    "@nuxtjs/axios": "^5.9.0",
     "cross-env": "^5.2.0",
     "font-awesome": "^4.7.0",
     "lodash.truncate": "^4.4.2",
@@ -25,6 +27,7 @@
     "vuetify-loader": "^1.2.0"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "nodemon": "^1.18.9",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
