--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/auth": "^4.8.5",
     "@nuxtjs/axios": "^5.9.0",
     "cross-env": "^5.2.0",
+    "event-source-polyfill": "^1.0.11",
     "font-awesome": "^4.7.0",
     "lodash.truncate": "^4.4.2",
     "nuxt": "^2.4.2",
