--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,26 +1,42 @@
-user nginx;
-worker_processes auto;
-worker_rlimit_nofile 40000;
-
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
-events {
-    worker_connections 8096;
-    multi_accept on;
-    use epoll;
+upstream messagerooms-api {
+    server messagerooms-api:9050;
 }
 
-http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+upstream messagerooms-ui {
+    server messagerooms-ui:3000;
+}
 
-    access_log /var/log/nginx/access.log main;
+server {
+    listen 80;
+    listen [::]:80;
 
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 15;
+    server_name messagerooms.local;
+    root /var/www/public;
 
-    include /etc/nginx/conf.d/*.conf
+    server_tokens off;
+
+    gzip on;
+    gzip_static on;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss $
+    gzip_proxied  any;
+    gzip_vary on;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    index index.html index.htm index.php;
+
+    charset utf-8;
+
+    location / {
+        proxy_pass http://messagerooms-ui;
+    }
+
+    location /api {
+        proxy_pass http://messagerooms-api;
+    }
 }
