--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,7 +36,7 @@ server {
         proxy_pass http://messagerooms-ui;
     }
 
-    location /api {
-        proxy_pass http://messagerooms-api;
+    location /api/ {
+        proxy_pass http://messagerooms-api/;
     }
 }
